updated the second section grid layout

--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -1,11 +1,12 @@
 <div id="home-page-main" class="home-page-main">
+
   <div class="homepage-content-section cards-container">
     <div class="card card-ui">
       <div class="card-icon">
         <i class="bi bi-code-slash"></i>
       </div>
       <div class="card-title">ui Designs</div>
-      <div class="card-description">Responsive and mobile-friendly UI.</div>
+      <div class="card-description">Responsive and Mobile-friendly UIs.</div>
       <div class="card-button">
         <button name="explore-1" class="explore" type="button">explore</button>
       </div>
@@ -16,7 +17,7 @@
         <i class="bi bi-plug"></i>
       </div>
       <div class="card-title">restful api</div>
-      <div class="card-description">Fast and real-time data processing.</div>
+      <div class="card-description">Fast and Real-time data synchronization.</div>
       <div class="card-button">
         <button name="explore-2" class="explore" type="button">explore</button>
       </div>
@@ -27,7 +28,7 @@
         <i class="bi bi-flask-florence"></i>
       </div>
       <div class="card-title">unit testing</div>
-      <div class="card-description">Writing optimized and quality code.</div>
+      <div class="card-description">Optimized and Tested quality code.</div>
       <div class="card-button">
         <button name="explore-3" class="explore" type="button">explore</button>
       </div>
