--- a/src/app/features/skills-set/pages/skills-set/skills-set.component.html
+++ b/src/app/features/skills-set/pages/skills-set/skills-set.component.html
@@ -5,20 +5,20 @@
     <div class="set-container">
       <div class="heading">Key skills</div>
       <div class="set">
-        <span class="skill"><i class="bi bi-caret-right-fill"></i>HTML5</span>
-        <span class="skill"><i class="bi bi-caret-right-fill"></i>SCSS</span>
+        <span class="skill"><i class="bi bi-code-slash"></i> HTML5</span>
+        <span class="skill"><i class="bi bi-code-slash"></i> SCSS</span>
         <span class="skill"
-          ><i class="bi bi-caret-right-fill"></i>Bootstrap 5</span
+          ><i class="bi bi-code-slash"></i> Bootstrap 5</span
         >
         <span class="skill"
-          ><i class="bi bi-caret-right-fill"></i>JavaScript</span
+          ><i class="bi bi-code-slash"></i> JavaScript</span
         >
         <span class="skill"
-          ><i class="bi bi-caret-right-fill"></i>TypeScript</span
+          ><i class="bi bi-code-slash"></i> TypeScript</span
         >
 
         <span class="skill"
-          ><i class="bi bi-caret-right-fill"></i>Angular 16+</span
+          ><i class="bi bi-code-slash"></i> Angular 16+</span
         >
       </div>
     </div>
@@ -43,12 +43,12 @@
     <div class="set-container">
       <div class="heading">frameworks & libs</div>
       <div class="set">
-        <span class="skill"><i class="bi bi-box-fill"></i> Angular 16+</span>
-        <span class="skill"><i class="bi bi-box-fill"></i> RxJs </span>
-        <span class="skill"><i class="bi bi-box-fill"></i> NgRx </span>
-        <span class="skill"><i class="bi bi-box-fill"></i> Ng2-charts</span>
-        <span class="skill"><i class="bi bi-box-fill"></i> Ngx Libraries </span>
-        <span class="skill"><i class="bi bi-box-fill"></i> Sweetalert2</span>
+        <span class="skill"><i class="bi bi-box"></i> Angular 16+</span>
+        <span class="skill"><i class="bi bi-box"></i> RxJs </span>
+        <span class="skill"><i class="bi bi-box"></i> NgRx </span>
+        <span class="skill"><i class="bi bi-box"></i> Ng2-charts</span>
+        <span class="skill"><i class="bi bi-box"></i> Ngx Libraries </span>
+        <span class="skill"><i class="bi bi-box"></i> Sweetalert2</span>
       </div>
     </div>
 
