--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -30,6 +30,10 @@
 
             .set-container {
                 padding: 4px $spacing-sm;
+                 i {
+                        padding-right: 3px;
+                        color: brown;
+                    }
             }
 
             .btn-container {
