--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -37,18 +37,10 @@
         <div class="project-description">
           <div class="heading">description</div>
           <div class="details">
-            <ul>
-              <li>
-                <i class="bi bi-stop"></i>
-                A business website developed using web technologies HTML5, SCSS,
-                Angular
-              </li>
-              <li>
-                <i class="bi bi-stop"></i>
-                A business website developed using web technologies HTML5, SCSS,
-                Angular
-              </li>
-            </ul>
+           A business website developed using web technologies SCSS,
+                Angular. A website developed using web technologies HTML5, SCSS,
+              . A business website developed using web technologies HTML5, SCSS,
+                Angular.
           </div>
         </div>
       </div>
@@ -60,16 +52,16 @@
         <div class="list-container">
           <div class="details">
             <ul>
-              <li><i class="bi bi-record2"></i>Responsive UI Design</li>
-              <li><i class="bi bi-record2"></i> Angular Framework</li>
-              <li><i class="bi bi-record2"></i> RESTful APIs</li>
+              <li><i class="bi bi-lightbulb"></i> Responsive UI</li>
+              <li><i class="bi bi-lightbulb"></i>  Angular 16+</li>
+              <li><i class="bi bi-lightbulb"></i>  RESTful APIs</li>
             </ul>
           </div>
           <div class="details">
             <ul>
-              <li><i class="bi bi-record2"></i> Unit Tests</li>
-              <li><i class="bi bi-record2"></i> GitHub and Git</li>
-              <li><i class="bi bi-record2"></i> SEO</li>
+              <li><i class="bi bi-lightbulb"></i>  Unit Tests</li>
+              <li><i class="bi bi-lightbulb"></i>  SEO (OG)</li>
+              <li><i class="bi bi-lightbulb"></i>  GitHub and Git</li>
             </ul>
           </div>
         </div>
@@ -80,17 +72,17 @@
         <div class="list-container">
           <div class="details">
             <ul>
-              <li><i class="bi bi-stop-fill"></i> Geo-location weather</li>
+              <li><i class="bi bi-stop-fill"></i> Rea-time Weather</li>
               <li><i class="bi bi-stop-fill"></i> Photo Gallery</li>
               <li><i class="bi bi-stop-fill"></i> Google Maps</li>
             </ul>
           </div>
           <div class="details">
             <ul>
-              <li><i class="bi bi-stop-fill"></i> Share buttons</li>
+              <li><i class="bi bi-stop-fill"></i> Share Buttons</li>
               <li><i class="bi bi-stop-fill"></i> Contact Form</li>
 
-              <li><i class="bi bi-stop-fill"></i> Toggle themes</li>
+              <li><i class="bi bi-stop-fill"></i> Toggle Themes</li>
             </ul>
           </div>
         </div>
@@ -101,6 +93,7 @@
   <div class="page-content-intro-hr">more projects</div>
 
   <section class="featured-projects">
+
     <div class="project-container">
       <div class="project-image-container">
         <img
@@ -113,13 +106,13 @@
       <div class="project-details-container">
         <div class="project-name">v-loc system</div>
 
-        <div class="project-summary"><i class="bi bi-arrow-return-right"></i> Website built with Angular</div>
+        <div class="project-summary">Vehicle Locator App</div>
 
         <div class="project-view-btns">
           <div class="view-btn git-hub-repo">
             <i class="bi bi-github"></i> GitHub
           </div>
-          <div class="view-btn more">
+          <div class="view-btn details">
             <i class="bi bi-bookmark"></i> Details
           </div>
           <div class="view-btn live-site">
@@ -139,15 +132,15 @@
       </div>
 
       <div class="project-details-container">
-        <div class="project-name">monakali attorneys</div>
+        <div class="project-name">KM attorneys</div>
 
-        <div class="project-summary"><i class="bi bi-arrow-return-right"></i> Website built with Angular</div>
+        <div class="project-summary">Business Website</div>
 
         <div class="project-view-btns">
           <div class="view-btn git-hub-repo">
             <i class="bi bi-github"></i> GitHub
           </div>
-          <div class="view-btn more">
+          <div class="view-btn details">
             <i class="bi bi-bookmark"></i> Details
           </div>
           <div class="view-btn live-site">
@@ -161,21 +154,49 @@
       <div class="project-image-container">
         <img
           class="project-img"
-          src="./img/projects/prj-mbg.png"
+          src="./img/projects/prj-weather.png"
           alt="featured project"
         />
       </div>
 
       <div class="project-details-container">
-        <div class="project-name">Geo-loc weather</div>
+        <div class="project-name"> weather App</div>
 
-        <div class="project-summary"><i class="bi bi-arrow-return-right"></i> Website built with Angular</div>
+        <div class="project-summary"> Real-time Weather</div>
 
         <div class="project-view-btns">
           <div class="view-btn git-hub-repo">
             <i class="bi bi-github"></i> GitHub
           </div>
-          <div class="view-btn more">
+          <div class="view-btn details">
+            <i class="bi bi-bookmark"></i> Details
+          </div>
+          <div class="view-btn live-site">
+            <i class="bi bi-box-arrow-up-right"></i> Online
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="project-container">
+      <div class="project-image-container">
+        <img
+          class="project-img"
+          src="./img/projects/prj-portfolio.png"
+          alt="featured project"
+        />
+      </div>
+
+      <div class="project-details-container">
+        <div class="project-name"> my portfolio </div>
+
+        <div class="project-summary">Personal portfolio</div>
+
+        <div class="project-view-btns">
+          <div class="view-btn git-hub-repo">
+            <i class="bi bi-github"></i> GitHub
+          </div>
+          <div class="view-btn details">
             <i class="bi bi-bookmark"></i> Details
           </div>
           <div class="view-btn live-site">
