--- a/src/styles/pages/_skills-set.scss
+++ b/src/styles/pages/_skills-set.scss
@@ -42,6 +42,7 @@
 
                     i {
                         padding-right: 3px;
+                        color: brown;
                     }
                 }
             }
