Hidden the last three projects

--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -37,10 +37,9 @@
         <div class="project-description">
           <div class="heading">description</div>
           <div class="details">
-           A business website developed using web technologies SCSS,
-                Angular. A website developed using web technologies HTML5, SCSS,
-              . A business website developed using web technologies HTML5, SCSS,
-                Angular.
+            A business website developed using web technologies SCSS, Angular. A
+            website developed using web technologies HTML5, SCSS, . A business
+            website developed using web technologies HTML5, SCSS, Angular.
           </div>
         </div>
       </div>
@@ -53,15 +52,15 @@
           <div class="details">
             <ul>
               <li><i class="bi bi-lightbulb"></i> Responsive UI</li>
-              <li><i class="bi bi-lightbulb"></i>  Angular 16+</li>
-              <li><i class="bi bi-lightbulb"></i>  RESTful APIs</li>
+              <li><i class="bi bi-lightbulb"></i> Angular 16+</li>
+              <li><i class="bi bi-lightbulb"></i> RESTful APIs</li>
             </ul>
           </div>
           <div class="details">
             <ul>
-              <li><i class="bi bi-lightbulb"></i>  Unit Tests</li>
-              <li><i class="bi bi-lightbulb"></i>  SEO (OG)</li>
-              <li><i class="bi bi-lightbulb"></i>  GitHub and Git</li>
+              <li><i class="bi bi-lightbulb"></i> Unit Tests</li>
+              <li><i class="bi bi-lightbulb"></i> SEO (OG)</li>
+              <li><i class="bi bi-lightbulb"></i> GitHub and Git</li>
             </ul>
           </div>
         </div>
@@ -90,11 +89,38 @@
     </div>
   </section>
 
-  <div class="page-content-intro-hr">more projects</div>
+  <div class="page-content-intro-hr">other projects</div>
 
   <section class="featured-projects">
+    <div class="project-container prj-1">
+      <div class="project-image-container">
+        <img
+          class="project-img"
+          src="./img/projects/prj-portfolio.png"
+          alt="featured project"
+        />
+      </div>
 
-    <div class="project-container">
+      <div class="project-details-container">
+        <div class="project-name">my portfolio</div>
+
+        <div class="project-summary">Personal portfolio</div>
+
+        <div class="project-view-btns">
+          <div class="view-btn git-hub-repo">
+            <i class="bi bi-github"></i> GitHub
+          </div>
+          <div class="view-btn details">
+            <i class="bi bi-bookmark"></i> Details
+          </div>
+          <div class="view-btn live-site">
+            <i class="bi bi-box-arrow-up-right"></i> Online
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="project-container prj-2">
       <div class="project-image-container">
         <img
           class="project-img"
@@ -122,7 +148,63 @@
       </div>
     </div>
 
-    <div class="project-container">
+    <div class="project-container prj-3">
+      <div class="project-image-container">
+        <img
+          class="project-img"
+          src="./img/projects/prj-weather.png"
+          alt="featured project"
+        />
+      </div>
+
+      <div class="project-details-container">
+        <div class="project-name">weather App</div>
+
+        <div class="project-summary">Real-time Weather</div>
+
+        <div class="project-view-btns">
+          <div class="view-btn git-hub-repo">
+            <i class="bi bi-github"></i> GitHub
+          </div>
+          <div class="view-btn details">
+            <i class="bi bi-bookmark"></i> Details
+          </div>
+          <div class="view-btn live-site">
+            <i class="bi bi-box-arrow-up-right"></i> Online
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="project-container prj-4">
+      <div class="project-image-container">
+        <img
+          class="project-img"
+          src="./img/projects/prj-mbg.png"
+          alt="featured project"
+        />
+      </div>
+
+      <div class="project-details-container">
+        <div class="project-name">mabunda group</div>
+
+        <div class="project-summary">Business Website</div>
+
+        <div class="project-view-btns">
+          <div class="view-btn git-hub-repo">
+            <i class="bi bi-github"></i> GitHub
+          </div>
+          <div class="view-btn details">
+            <i class="bi bi-bookmark"></i> Details
+          </div>
+          <div class="view-btn live-site">
+            <i class="bi bi-box-arrow-up-right"></i> Online
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="project-container prj-5">
       <div class="project-image-container">
         <img
           class="project-img"
@@ -150,35 +232,7 @@
       </div>
     </div>
 
-    <div class="project-container">
-      <div class="project-image-container">
-        <img
-          class="project-img"
-          src="./img/projects/prj-weather.png"
-          alt="featured project"
-        />
-      </div>
-
-      <div class="project-details-container">
-        <div class="project-name"> weather App</div>
-
-        <div class="project-summary"> Real-time Weather</div>
-
-        <div class="project-view-btns">
-          <div class="view-btn git-hub-repo">
-            <i class="bi bi-github"></i> GitHub
-          </div>
-          <div class="view-btn details">
-            <i class="bi bi-bookmark"></i> Details
-          </div>
-          <div class="view-btn live-site">
-            <i class="bi bi-box-arrow-up-right"></i> Online
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="project-container">
+    <div class="project-container prj-6">
       <div class="project-image-container">
         <img
           class="project-img"
@@ -188,7 +242,7 @@
       </div>
 
       <div class="project-details-container">
-        <div class="project-name"> my portfolio </div>
+        <div class="project-name">my portfolio</div>
 
         <div class="project-summary">Personal portfolio</div>
 
