--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -320,9 +320,9 @@
                     }
                 }
 
-                .project-details-container { 
+                .project-details-container {
                     .project-view-btns {
-                      
+
                         .git-hub-repo {
                             background-color: $light-dark-bg-color;
                         }
@@ -395,7 +395,7 @@
                     }
 
                     .project-view-btns {
-                     
+
                         .git-hub-repo {
                             background-color: $light-dark-bg-color;
                         }
@@ -428,7 +428,7 @@
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             column-gap: 25px;
-        
+
             .project-container {
                 display: grid;
                 grid-template-columns: 1fr;
@@ -458,7 +458,7 @@
                         .view-btn {
                             min-width: 60px;
                         }
-                        
+
                         .details {
                             display: none;
                         }
@@ -527,6 +527,7 @@
 
                 .project-image-container {
                     cursor: pointer;
+
                     img {
                         height: 78px;
                     }
@@ -534,7 +535,7 @@
 
                 .project-details-container {
                     text-align: left;
-                    
+
                     .project-name {
                         border-radius: 0 $spacing-xs $spacing-xs 0;
                         border-left: 5px solid red;
@@ -559,6 +560,12 @@
                         }
                     }
                 }
+            }
+
+                        .prj-4,
+            .prj-5,
+            .prj-6 {
+                display: none;
             }
         }
     }
