Made form responsive

--- a/src/app/features/contact/pages/contact/contact.component.html
+++ b/src/app/features/contact/pages/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div class="contact-page-main" id="contact-page-main">
-  <div class="page-content-intro-hr">drop a comment</div>
+  <div class="page-content-intro-hr">contact form</div>
 
   <div class="contact-form-container">
     <!-- <h4>Contac Form</h4> -->
@@ -127,7 +127,7 @@
             type="submit"
             id="submit-button"
             name="submitButton"
-            class="submit-button"
+            class="submit-button button"
             value="submit"
           />
 
@@ -135,7 +135,7 @@
             type="reset"
             id="reset-button"
             name="resetButton"
-            class="reset-button"
+            class="reset-button button"
             value="clear"
           />
       </div>
