--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -10,9 +10,6 @@
     @include page-content-intro-hr;
 
     .contact-form-container {
-        // border-top: 1px solid #e5e5e5;
-        //   padding: 0 $spacing-sm;
-
         form {
             color: gray;
             padding: 0 $spacing-sm;
@@ -105,6 +102,7 @@
     @include respond-to("sm") {
         .contact-form-container {
             form {
+                padding: 0;
                 .contact-info {
                     grid-template-columns: 1fr;
                 }
